Dmdev Hibernate course (Chapter 7, Hibernate querying). Lesson 49 (first half)
- Practice